// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation should match snapshot - left 1`] = `
<styled.button
  alt="Navigation"
>
  <ArrowLeft />
</styled.button>
`;

exports[`Navigation should match snapshot - right (default) 1`] = `
<styled.button
  alt="Navigation"
>
  <ArrowRight />
</styled.button>
`;
